# rusty-serra

./: .gitignore  AllCards_test_data.json  Cargo.toml  Dockerfile  README.md
src/: json_storage.rs  main.rs  mtg_data.rs
src/integration_test/: mod.rs
