[package]
name = "rusty-serra"
version = "0.1.0"
authors = ["Antti Kontoniemi <antti.kontoniemi@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
serde = "1.0.89"
serde_json = "1.0.39"
serde_derive = "1.0.89"
strsim = "0.8.0"
reqwest = "0.9.12"
lazy_static = "1.3.0"
